Java 17 features in code. Fixed tests for windows